feat(api): Add authentication middleware
Added authentication middleware
Added /api/me endpoint
Updated create session endpoints status code in services and modified related tests
